--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -176,7 +176,33 @@
             android:textColor="@color/themeGreen"/>
 
         <TextView
+            android:id="@+id/otherPledge0"
+            android:layout_gravity="center"
+            android:paddingTop="10dp"
+            android:textSize="12dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="" />
+
+        <TextView
             android:id="@+id/otherPledge1"
+            android:layout_gravity="center"
+            android:paddingTop="10dp"
+            android:textSize="12dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="" />
+        <TextView
+            android:id="@+id/otherPledge2"
+            android:layout_gravity="center"
+            android:paddingTop="10dp"
+            android:textSize="12dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="" />
+
+        <TextView
+            android:id="@+id/otherPledge3"
             android:layout_gravity="center"
             android:paddingTop="10dp"
             android:textSize="12dp"
