--- a/app/src/main/res/layout/fragment_restaurant.xml
+++ b/app/src/main/res/layout/fragment_restaurant.xml
@@ -172,15 +172,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/facebook_share_button" />
 
-    <TextView
-        android:id="@+id/location"
-        android:layout_width="wrap_content"
+    <Spinner
+        android:id="@+id/location_spinner"
+        android:entries="@array/city_array"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:gravity="center"
-        android:drawableLeft="@drawable/fui_ic_googleg_color_24dp"
-        android:hint="Current Location"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/share_location_switch" />
