--- a/app/src/main/res/layout/fragment_restaurant.xml
+++ b/app/src/main/res/layout/fragment_restaurant.xml
@@ -213,23 +213,27 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/description_edit">
 
+            <TextView
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:text="@string/add_photo"/>
+
             <ImageView
+                android:id="@+id/beef_button"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:src="@drawable/beef"
                 android:layout_weight="1"/>
 
             <ImageView
+                android:id="@+id/lamb_button"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:src="@drawable/lamb"
                 android:layout_weight="1"/>
 
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/chicken"
-                android:layout_weight="1"/>
         </LinearLayout>
 
         <Button
