--- a/app/src/main/res/layout/fragment_restaurant.xml
+++ b/app/src/main/res/layout/fragment_restaurant.xml
@@ -205,34 +205,48 @@
 
         <LinearLayout
             android:id="@+id/linearLayout"
+            android:paddingEnd="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-
             android:orientation="horizontal"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/description_edit">
 
             <TextView
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
+                android:layout_width="94dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="2"
+                android:paddingStart="10dp"
+                android:text="@string/add_photo"
                 android:textColor="@android:color/black"
-                android:text="@string/add_photo"/>
+                android:textSize="30sp"
+                android:textStyle="bold" />
 
             <ImageView
-                android:id="@+id/beef_button"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/beef"
-                android:layout_weight="1"/>
+                android:id="@+id/gallery_button"
+                android:layout_width="10dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:src="@drawable/gallery" />
 
             <ImageView
-                android:id="@+id/lamb_button"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/lamb"
-                android:layout_weight="1"/>
+                android:id="@+id/camera_button"
+                android:layout_width="10dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:src="@drawable/camera" />
+
+            <ImageView
+                android:layout_gravity="center"
+                android:id="@+id/reset_button"
+                android:layout_width="10dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:src="@drawable/reset" />
+
+
 
         </LinearLayout>
 
