--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    android:id="@+id/scroll"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -28,7 +30,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:orientation="horizontal"
-            android:padding="10dp"
+            android:paddingTop="10dp"
+            android:paddingStart="40dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -48,7 +51,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingEnd="20dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -91,15 +95,12 @@
             app:layout_constraintTop_toBottomOf="@+id/title_layout"/>
 
         <ImageView
-            style="@style/RectangleShortRounded"
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_marginBottom="25dp"
             android:src="@drawable/ic_user"
-            app:layout_constraintBottom_toBottomOf="@+id/textView"
-            app:layout_constraintEnd_toEndOf="@+id/textView"
-            app:layout_constraintStart_toStartOf="@+id/textView"
-            app:layout_constraintTop_toTopOf="@+id/textView"
-            app:layout_constraintVertical_bias="0.58"/>
+            app:layout_constraintBottom_toBottomOf="@+id/community_pledge_participant"
+            app:layout_constraintEnd_toStartOf="@+id/community_pledge_participant" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline"
@@ -112,11 +113,12 @@
             android:id="@+id/community_pledge_participant"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="@string/participants_number"
             android:textColor="#000000"
             android:textSize="50sp"
-            android:gravity="center"
             android:textStyle="bold"
+            android:paddingBottom="10dp"
             app:layout_constraintBottom_toBottomOf="@+id/textView"
             app:layout_constraintEnd_toEndOf="@+id/textView"
             app:layout_constraintStart_toStartOf="@+id/textView" />
@@ -214,7 +216,6 @@
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginEnd="8dp"
             android:src="@drawable/tree_icon"
             app:layout_constraintBottom_toBottomOf="@+id/textView6"
             app:layout_constraintEnd_toStartOf="@+id/community_pledge_trees"
