--- a/app/src/main/res/layout/fragment_restaurant.xml
+++ b/app/src/main/res/layout/fragment_restaurant.xml
@@ -183,13 +183,13 @@
             app:layout_constraintTop_toBottomOf="@+id/main_ingredient" />
 
         <EditText
+            style="@style/RectangleShortRounded"
             android:id="@+id/description_edit"
             android:layout_width="340dp"
             android:layout_height="140dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:background="@drawable/box"
             android:gravity="center"
             android:hint="Description (200 words max.)"
             android:maxLength="200"
@@ -260,8 +260,8 @@
 
         <ImageView
             android:id="@+id/final_photo"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
             android:layout_marginStart="28dp"
             android:layout_marginTop="16dp"
             android:scaleType="fitXY"
